--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,9 +14,10 @@ body {
     #content{
         display: grid;
         height: 100%;
-        grid-template-rows: 112px 1fr 40px;
+        grid-template-rows: 100px 1fr 40px;
         grid-template-columns: 1fr 4fr;
         padding: 0 10px;
+        gap: 10px;
     }
 }
 
